- Upgrade to Java 11. - Remove guava. - Some code clean.